--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -11,7 +11,10 @@ import Player from '../components/Player.svelte'
 		<title>Astro</title>
 	</head>
 	<body>
-		<h1>GENIUSZ</h1>
+		<div style="display: flex; align-items: center; gap: 1vw;">
+			<h1>GENIUSZ</h1>
+			<a href="/">reset</a>
+		</div>
 		<Player client:load />
 	</body>
 	<style>
@@ -19,6 +22,20 @@ import Player from '../components/Player.svelte'
 			background-color: #2f2f2f;
 			color: white;
 			font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+		}
+		a {
+			text-decoration: none;
+			background-color: red;
+			padding: 0.09rem;
+			padding-left: 0.5rem;
+			padding-right: 0.5rem;
+			border-radius: 1rem;
+			color: white;
+			transition-duration: 250ms;
+		}
+
+		a:hover {
+			background-color: rgb(206, 0, 0);
 		}
 	</style>
 </html>
