--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,5 +1,10 @@
 ---
-import Player from '../components/Player.svelte'
+import Player from "../components/Player.svelte";
+
+import { Alert } from "../components/Alert.tsx";
+import { Badge } from "@/components/ui/badge";
+
+import "@/styles/globals.css";
 ---
 
 <html lang="en">
@@ -8,34 +13,20 @@ import Player from '../components/Player.svelte'
 		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
 		<meta name="viewport" content="width=device-width" />
 		<meta name="generator" content={Astro.generator} />
-		<title>Astro</title>
+		<title>GENIUSZ</title>
 	</head>
-	<body>
-		<div style="display: flex; align-items: center; gap: 1vw;">
-			<h1>GENIUSZ</h1>
-			<a href="/">reset</a>
-		</div>
+	<body class="bg-neutral-200">
+		<header class="py-3 px-14 mb-3 border-b border-neutral-400">
+			<div class="container flex max-w-screen-2xl items-center">
+				<div class="flex items-center gap-4">
+					<h1 class="text-xl font-[GeistBold]">Geniusz</h1>
+					<a href="/"><Badge variant="destructive">Reset</Badge></a>
+				</div>
+				<div class="flex flex-1 justify-end">
+					<Alert client:idle />
+				</div>
+			</div>
+		</header>
 		<Player client:load />
 	</body>
-	<style>
-		html {
-			background-color: #2f2f2f;
-			color: white;
-			font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-		}
-		a {
-			text-decoration: none;
-			background-color: red;
-			padding: 0.09rem;
-			padding-left: 0.5rem;
-			padding-right: 0.5rem;
-			border-radius: 1rem;
-			color: white;
-			transition-duration: 250ms;
-		}
-
-		a:hover {
-			background-color: rgb(206, 0, 0);
-		}
-	</style>
 </html>
