--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -18,7 +18,7 @@ import "@/styles/globals.css";
 		<meta name="generator" content={Astro.generator} />
 		<title>GENIUSZ</title>
 	</head>
-	<body class="bg-neutral-200">
+	<body class="bg-backround">
 		<header
 			class="flex items-center px-1 mb-3 h-14 border-b md:px-14 border-neutral-400"
 		>
