--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -45,7 +45,7 @@ import "@/styles/globals.css";
 </html>
 
 <script>
-	// TODO: REWRITE EVERYTHING WITH DRIZZLE ORM
+	// TODO: REWRITE EVERYTHING WITH VERCEL POSTGRES SDK
 	
 	// import { log, time } from "@/lib/stores";
 
